[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Christian Palacio Castro <cmpalacioc27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
requests = "^2.32.3"
ipykernel = "^6.29.5"
pyarrow = "^18.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
